compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__consts__constructor_function_in_constant.snap
---
source: compiler-core/src/nix/tests/consts.rs
expression: pub const a = Ok
snapshot_kind: text
---
let inherit (builtins.import ./../gleam.nix) Ok; a = Ok; in { inherit a; }
