compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__consts__custom_type_constructor_imported_and_aliased.snap
---
source: compiler-core/src/nix/tests/consts.rs
expression: "import other_module.{A as B}\npub const local = B\n"
snapshot_kind: text
---
----- SOURCE CODE
import other_module.{A as B}
pub const local = B


----- COMPILED NIX
let
  other_module' = builtins.import ./../../package/other_module.nix;
  B = (builtins.import ./../../package/other_module.nix).A;
  
  local = B;
in
{ inherit local; }
